# nabla-labs-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  install_demo.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md
examples/: basic_usage.py  custom_dataset.py
garment_programs/: base_classes.py  garment_enums.py  garment_program_utils.py  weon_circle_skirt.py  weon_shirt.py  weon_torso.py
nabla_labs_core/: __init__.py  constants.py  primitives.py  visualize_dataset.py
pattern_definitions/: body_definition.py  pants_design.py  skirt_design.py  torso_design.py
pygarment/garmentcode/: base.py  connector.py  edge.py  edge_factory.py  interface.py  operators.py
pygarment/mayaqltools/: garmentUI.py  mayascene.py  scan_imitation.py  simulation.py
pygarment/meshgen/: cli_pattern_config.py  garment.py  garment_data.py  garment_utils.py  pattern_data.py  sim_config.py  simulation.py
tests/: __init__.py  test_constants.py
weon_garment_code/assets/: perfect_fit_material_grid_config.yaml  perfect_fit_pants_grid_config.yaml
weon_garment_code/config/: __init__.py  dataset_properties.py  garment_properties.py  mlflow_config.json  paths_config.py  render_config.py  sim_config.py  simulation_control.py  simulation_options.py
weon_garment_code/garment_programs/: base_classes.py  garment_category.py  garment_enums.py  garment_factory.py  garment_program_utils.py  weon_bands.py  (+6 more)
(+97 files in other folders)
